Changed the name of nav item
Changed the name of nav item from "View High Scores" to "High Scores Board".

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li onclick="homeOnClick()">Home</li>
-                <li onclick="renderHighScoresPage()">View High Scores</li>
+                <li onclick="renderHighScoresPage()">High Scores Board</li>
                 <li id="timer">Timer: </li>
             </ul>
         </nav>
